--- a/style.css
+++ b/style.css
@@ -29,7 +29,7 @@ h1 {
     margin: 0;
 }
 
-p {
+.header-section p {
     font-size: 18px;
     color: white;
     margin-bottom: 50px;
@@ -74,9 +74,10 @@ h2 {
     font-size: 35px;
 }
 
-.donate-section p {
+p {
     margin: 0;
     color: #6F706F;
+    text-align: center;
 }
 
 h3 {
@@ -106,3 +107,44 @@ h5 {
 }
 
 .button a {}
+
+.donate-plan-section {
+    width: 80%;
+    margin: auto auto 50px auto;
+}
+
+.our-plan {
+    text-align: center;
+    width: 60%;
+    margin: 100px auto 40px auto;
+}
+
+.family {
+    width: 28%;
+    margin: auto;
+    padding: 10px;
+    border-radius: 5px;
+}
+
+.family img {
+    margin-top: 30px;
+}
+
+.family h4 {}
+
+.family p {
+    text-align: left;
+    margin-bottom: 20px;
+}
+
+#food {
+    background-color: #EDF5F6;
+}
+
+#selter {
+    background-color: #FFEEEE;
+}
+
+#education {
+    background-color: #FFF4D6;
+}
