--- a/style.css
+++ b/style.css
@@ -176,3 +176,43 @@ ul {}
 li {
     color: #6f7074;
 }
+
+.update-section {
+    width: 80%;
+    margin: 50px auto;
+}
+
+.update {
+    width: 60%;
+    margin: 30px auto;
+    text-align: center;
+}
+
+.email {
+    width: 50%;
+    margin: auto;
+    background-color: #FFF4D6;
+    padding: 50px 100px;
+    border-radius: 5px;
+    text-align: center;
+}
+
+input {
+    border: hidden;
+    background-color: #D9D9D9;
+    padding: 10px 20px 10px 5px;
+    border-radius: 3px;
+    margin-right: -10px;
+}
+
+button {
+    border: hidden;
+    background-color: #FF5959;
+    color: wheat;
+    padding: 10px 25px;
+    border-radius: 3px;
+}
+
+form {
+    margin: 0;
+}
